Razor sample generated template is now working.

--- a/iTextDesignerWithGUI.csproj
+++ b/iTextDesignerWithGUI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Templates\**\*.html">
+    <Content Include="Templates\**\*.html;Templates\**\*.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
