--- a/iTextDesignerWithGUI.csproj
+++ b/iTextDesignerWithGUI.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="itext7" Version="8.0.2" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.2" />
     <PackageReference Include="itext7.pdfhtml" Version="5.0.2" />
     <PackageReference Include="RazorLight" Version="2.3.1" />
   </ItemGroup>
